--- a/head.html
+++ b/head.html
@@ -13,6 +13,8 @@
 -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+    <link href='http://fonts.googleapis.com/css?family=Roboto:100, 200' rel='stylesheet' type='text/css'>
 <!--
     <script src="/js/jquery-1.11.0.min.js"></script>
     <script src="/js/vanity.js"></script>
